# ProjetDataImage

./: CMakeLists.txt
cmake-modules/: FindOpenCV bis.cmake  findOpenCV.cmake
include/: explorer.h  imageProcessor.h  patternRecognition.h  shape.h
src/: explorer.cpp  imageProcessor.cpp  main.cpp  main_test_opencv.cpp  patternRecognition.cpp  shape.cpp
